--- a/style.css
+++ b/style.css
@@ -68,16 +68,23 @@ nav a:hover {
     margin-right: auto;
     transition: all .2s;
 }
-.tx:houver{
-    transform: scale(0.90);
+.tx:hover{
+    animation-name: destaque;
+    animation-duration: 0.5s;
+    animation-iteration-count: infinite;
     border-radius: 20px;
 }
 .cabeçario-home:hover  {
     box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
 }
 
-
-
+@keyframes destaque{
+    0%{transform: scale(0.98);}
+    25%{transform: scale(0.94);}
+    50%{transform: scale(0.90);}
+    75%{transform: scale(0.94);}
+    100%{transform: scale(0.98);}
+}
 
 
 
